# yadro-computer-club-system

./: CMakeLists.txt  LICENSE  README.md
example/: test_file_2.txt  test_file_2_expected_output.txt  test_file_3.txt  test_file_3_expected_output.txt  test_file_4.txt  test_file_4_expected_output.txt  test_file_5.txt  test_file_5_expected_output.txt
include/: computer_club.hpp  input_validator.hpp  time.hpp
src/: computer_club.cpp  input_validator.cpp  main.cpp  time.cpp
tests/: test_computer_club.cpp  test_computer_club_simple.cpp  test_input_validator.cpp  test_time.cpp
